--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -96,6 +96,7 @@ match-lists
 mlag-configuration
 monitor-layer1
 monitor-connectivity
+monitor-connectivity-2
 monitor-sessions
 monitor-telemetry-influx
 monitor-telemetry-postcard-policy
