Add 2 new tests.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
@@ -69,6 +69,10 @@ interface Vlan44
    ipv6 dhcp relay destination a0::5 vrf TEST source-address a0::6 link-address a0::7
    ipv6 dhcp relay destination a0::8
    ipv6 address a0::4/64
+   isis authentication mode md5 rx-disabled level-1
+   isis authentication mode text rx-disabled level-2
+   isis authentication key 0 password level-1
+   isis authentication key 0 password level-2
 !
 interface Vlan50
    description IP NAT Testing
@@ -76,6 +80,8 @@ interface Vlan50
    ip nat source dynamic access-list ACL2 pool POOL2
    ip nat destination static 1.0.0.1 2.0.0.1
    ip nat destination dynamic access-list ACL1 pool POOL1
+   isis authentication mode text rx-disabled level-2
+   isis authentication key 0 password level-2
 !
 interface Vlan75
    description SVI Description
