Add test for duplicate address.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-pim-sparse-mode.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-pim-sparse-mode.cfg
@@ -15,6 +15,9 @@ router pim sparse-mode
       rp address 10.238.1.161 239.12.12.21/32 priority 20
       rp address 10.238.1.161 access-list RP_ACL priority 20
       rp address 10.238.1.161 access-list RP_ACL2 priority 20
+      rp address 10.238.1.161 239.12.12.12/32 priority 20
+      rp address 10.238.1.161 access-list RP_ACL priority 20
+      rp address 10.238.1.161 access-list RP_ACL2 priority 20
       anycast-rp 10.38.1.161 10.50.64.16 register-count 15
       ssm range standard
    !
