--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-pim-sparse-mode.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-pim-sparse-mode.yml
@@ -16,6 +16,13 @@ router_pim_sparse_mode:
           - RP_ACL
           - RP_ACL2
         priority: 20
+      - address: 10.238.1.161
+        groups:
+          - 239.12.12.12/32
+        access_lists:
+          - RP_ACL
+          - RP_ACL2
+        priority: 20
     anycast_rps:
       - address: 10.38.1.161
         other_anycast_rp_addresses:
