updated the test

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/SL-LEAF0B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/SL-LEAF0B.cfg
@@ -31,6 +31,7 @@ interface Port-Channel27
    switchport
    switchport trunk allowed vlan none
    switchport mode trunk
+   mlag 27
 !
 interface Port-Channel41
    description SL-LEAF2_Po41
@@ -38,6 +39,7 @@ interface Port-Channel41
    switchport
    switchport trunk allowed vlan none
    switchport mode trunk
+   mlag 41
 !
 interface Ethernet25
    description MLAG_PEER_SL-LEAF0A_Ethernet25
