--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/SL-LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/SL-LEAF1A.yml
@@ -55,6 +55,7 @@ port_channel_interfaces:
   shutdown: false
   mode: trunk
   vlans: none
+  mlag: 28
 ethernet_interfaces:
 - name: Ethernet25
   peer: SL-LEAF1B
