--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/SL-LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/SL-LEAF1A.cfg
@@ -39,6 +39,7 @@ interface Port-Channel28
    switchport
    switchport trunk allowed vlan none
    switchport mode trunk
+   mlag 28
 !
 interface Ethernet25
    description MLAG_PEER_SL-LEAF1B_Ethernet25
