--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/SINGLE_LINK_TO_MLAG_PAIR.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/SINGLE_LINK_TO_MLAG_PAIR.yml
@@ -3,6 +3,8 @@ fabric_name: SINGLE_LINK_TO_MLAG_PAIR
 
 type: l2leaf
 
+mlag_on_orphan_port_channel_downlink: true
+
 l2leaf:
   defaults:
     mlag_peer_ipv4_pool: 10.10.255.0/24
