--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -97,6 +97,7 @@ all:
             failure-no-local-path-group-in-default-policy:
             ipv4-acl-in-missing-on-wan-interface:
             ipv4-acls:
+            isis-system-id-format-missing-node-id:
             missing-avt-id-cv-pathfinder:
             missing-prefix-list-in-cv-pathfinder:
             missing-prefix-list-definition-cv-pathfinder:
