Refactor(eos_designs)!: Change the default value of `mlag_on_orphan_port_channel_downlink` to `false` (#4371)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/SINGLE_LINK_TO_MLAG_PAIR.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/SINGLE_LINK_TO_MLAG_PAIR.yml
@@ -3,7 +3,7 @@ fabric_name: SINGLE_LINK_TO_MLAG_PAIR
 
 type: l2leaf
 
-mlag_on_orphan_port_channel_downlink: false
+mlag_on_orphan_port_channel_downlink: true
 
 l2leaf:
   defaults:
