--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -264,7 +264,7 @@ interface Ethernet13
    switchport mode trunk phone
    switchport
    isis authentication mode md5 rx-disabled level-1
-   isis authentication mode md5 rx-disabled level-2
+   isis authentication mode text rx-disabled level-2
    isis authentication key 0 password level-1
    isis authentication key 0 password level-2
 !
@@ -275,7 +275,7 @@ interface Ethernet14
    switchport mode trunk
    switchport
    isis authentication mode md5 level-1
-   isis authentication mode md5 level-2
+   isis authentication mode sha key-id 10 level-2
    isis authentication key 0 password level-1
    isis authentication key 0 password level-2
 !
@@ -286,7 +286,7 @@ interface Ethernet15
    switchport
    switchport pvlan mapping 111
    isis authentication mode shared-secret profile profile1 algorithm sha-256 level-1
-   isis authentication mode shared-secret profile profile1 algorithm sha-256 level-2
+   isis authentication mode shared-secret profile profile2 algorithm sha-1 level-2
 !
 interface Ethernet16
    description PVLAN Promiscuous Trunk - vlan translation out
@@ -296,7 +296,7 @@ interface Ethernet16
    switchport
    switchport vlan translation out 111-112 110
    isis authentication mode shared-secret profile profile1 algorithm sha-256 rx-disabled level-1
-   isis authentication mode shared-secret profile profile1 algorithm sha-256 rx-disabled level-2
+   isis authentication mode shared-secret profile profile2 algorithm sha-1 rx-disabled level-2
 !
 interface Ethernet17
    description PVLAN Secondary Trunk
@@ -305,7 +305,7 @@ interface Ethernet17
    switchport
    switchport trunk private-vlan secondary
    isis authentication mode sha key-id 5 rx-disabled level-1
-   isis authentication mode sha key-id 5 rx-disabled level-2
+   isis authentication mode sha key-id 10 rx-disabled level-2
 !
 interface Ethernet18
    description PBR Description
@@ -314,7 +314,7 @@ interface Ethernet18
    ip address 192.0.2.1/31
    service-policy type pbr input MyLANServicePolicy
    isis authentication mode sha key-id 5 level-1
-   isis authentication mode sha key-id 5 level-2
+   isis authentication mode sha key-id 10 level-2
 !
 interface Ethernet19
    description Switched port with no LLDP rx/tx
