--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -50,7 +50,7 @@ interface Port-Channel8
    isis authentication mode md5 level-1
    isis authentication mode md5 level-2
    isis authentication key 0 password level-1
-   isis authentication key 0 password level-2
+   isis authentication key 0 password1 level-2
    switchport port-security violation protect
 !
 interface Port-Channel8.101
@@ -160,7 +160,7 @@ interface Port-Channel20
    l2-protocol encapsulation dot1q vlan 200
    isis enable EVPN_UNDERLAY
    isis authentication mode shared-secret profile profile1 algorithm sha-256 rx-disabled level-1
-   isis authentication mode shared-secret profile profile1 algorithm sha-256 rx-disabled level-2
+   isis authentication mode shared-secret profile profile2 algorithm sha-1 rx-disabled level-2
 !
 interface Port-Channel50
    description SRV-POD03_PortChanne1
@@ -217,7 +217,7 @@ interface Port-Channel100
    no switchport
    isis enable EVPN_UNDERLAY
    isis authentication mode md5 rx-disabled level-1
-   isis authentication mode md5 rx-disabled level-2
+   isis authentication mode text rx-disabled level-2
    isis authentication key 0 password level-1
    isis authentication key 0 password level-2
    switchport source-interface tx multicast
