updated j2 and schema with isis levels

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-v4-v6-evpn.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-v4-v6-evpn.cfg
@@ -116,6 +116,7 @@ router bgp 65100
       neighbor IPV6-UNDERLAY-MLAG activate
       neighbor TEST_RCF rcf in Address_Family_IPV6_In()
       neighbor TEST_RCF rcf out Address_Family_IPV6_Out()
+      redistribute isis level-1 rcf Address_Family_IPV6_ISIS()
    !
    vrf Tenant_A
       rd 10.50.64.15:30001
