--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
@@ -27,9 +27,11 @@ router bgp 65001
    !
    address-family ipv4 multicast
       neighbor FOOBAR activate
+      redistribute isis level-1 include leaked
    !
    address-family ipv6
       no neighbor FOOBAR activate
+      redistribute isis level-1-2 rcf Address_Family_IPV6_ISIS()
    !
    address-family ipv6 multicast
       no neighbor FOOBAR activate
@@ -40,6 +42,7 @@ router bgp 65001
    !
    vrf VRF01
       no bgp redistribute-internal
+      redistribute isis level-1-2 rcf VRF_RCF_ISIS()
       !
       address-family flow-spec ipv4
          bgp missing-policy direction in action permit
@@ -113,6 +116,7 @@ router bgp 65001
          redistribute static route-map VRF_AFIPV6MULTI_RM_STATIC
    !
    vrf VRF02
+      redistribute isis level-1 rcf VRF_RCF_ISIS()
       !
       address-family ipv4
          bgp additional-paths send backup
@@ -122,6 +126,7 @@ router bgp 65001
    !
    vrf VRF03
       redistribute dynamic rcf VRF_RCF_DYNAMIC()
+      redistribute isis level-2 rcf VRF_RCF_ISIS()
       !
       address-family ipv4
          bgp additional-paths send ecmp
