Addressing review comments

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ptp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ptp.cfg
@@ -27,6 +27,7 @@ interface Port-Channel5
    description DC1_L2LEAF1_Po1
    switchport trunk allowed vlan 110,201
    switchport mode trunk
+   switchport
    mlag 5
    ptp enable
    ptp mpass
@@ -41,6 +42,7 @@ interface Ethernet3
    description P2P_LINK_TO_DC1-SPINE2_Ethernet5
    switchport trunk allowed vlan 2,14
    switchport mode trunk
+   switchport
    ptp enable
    ptp sync-message interval 1
    ptp delay-mechanism e2e
