--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/qos.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/qos.cfg
@@ -167,6 +167,7 @@ interface Port-Channel3
    switchport mode trunk
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
+   switchport
    qos trust cos
    qos cos 2
    service-profile experiment
@@ -194,6 +195,7 @@ interface Ethernet6
    description SRV-POD02_Eth1
    switchport trunk allowed vlan 110-111,210-211
    switchport mode trunk
+   switchport
    qos trust cos
    qos cos 2
    service-profile experiment
@@ -205,6 +207,7 @@ interface Ethernet7
    description Test-with-policymap
    switchport trunk allowed vlan 110-111,210-211
    switchport mode trunk
+   switchport
    service-profile qprof_testwithpolicy
    !
    uc-tx-queue 4
