--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/port-channel-interfaces.yml
@@ -1,5 +1,7 @@
 ### Port-Channel Interfaces ###
 # Testing deprecated keys for switchport config in port-channel_interfaces
+# The deprecated keys listed below will be removed in AVD6.0.0:
+# mode, vlans, native_vlan, native_vlan_tag, trunk_groups, phone, vlan_translations, trunk_private_vlan_secondary, pvlan_mapping
 port_channel_interfaces:
   - name: Port-Channel2
     mode: access
