--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/mac-security-eth-po-entropy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/mac-security-eth-po-entropy.cfg
@@ -24,6 +24,7 @@ interface Port-Channel3
    description L2-PORT
    switchport trunk allowed vlan 1-5
    switchport mode trunk
+   switchport
 !
 interface Ethernet1
    mac security profile A1
