--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -5,6 +5,7 @@ interface Port-Channel3
    switchport mode trunk
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
+   switchport
    no snmp trap link-change
    shape rate 200000 kbps
 !
@@ -13,6 +14,7 @@ interface Port-Channel5
    bgp session tracker ST2
    switchport trunk allowed vlan 110,201
    switchport mode trunk
+   switchport
    ip igmp host-proxy
    ip igmp host-proxy 239.0.0.1
    ip igmp host-proxy 239.0.0.2 exclude 10.0.2.1
@@ -40,6 +42,7 @@ interface Port-Channel5
 !
 interface Port-Channel8
    description to Dev02 Port-channel 8
+   no switchport
    switchport port-security violation protect
 !
 interface Port-Channel8.101
@@ -60,6 +63,7 @@ interface Port-Channel10
    description SRV01_bond0
    switchport trunk allowed vlan 2-3000
    switchport mode trunk
+   switchport
    evpn ethernet-segment
       identifier 0000:0000:0404:0404:0303
       route-target import 04:04:03:03:02:02
@@ -71,9 +75,11 @@ interface Port-Channel12
    switchport phone vlan 70
    switchport phone trunk untagged
    switchport mode trunk phone
+   switchport
 !
 interface Port-Channel13
    description EVPN-Vxlan single-active redundancy
+   switchport
    evpn ethernet-segment
       identifier 0000:0000:0000:0102:0304
       redundancy single-active
@@ -95,6 +101,7 @@ interface Port-Channel15
    description DC1_L2LEAF3_Po1
    switchport trunk allowed vlan 110,201
    switchport mode trunk
+   switchport
    mlag 15
    spanning-tree guard loop
    link tracking group EVPN_MH_ES2 upstream
@@ -105,7 +112,7 @@ interface Port-Channel16
    switchport dot1q vlan tag disallowed
    switchport trunk allowed vlan 110,201
    switchport mode trunk
-   no switchport
+   switchport
    switchport vlan translation out 23 dot1q-tunnel 22
    snmp trap link-change
    mlag 16
@@ -124,12 +131,14 @@ interface Port-Channel20
    description Po_in_mode_access_accepting_tagged_LACP_frames
    switchport access vlan 200
    switchport mode access
+   switchport
    l2-protocol encapsulation dot1q vlan 200
 !
 interface Port-Channel50
    description SRV-POD03_PortChanne1
    switchport trunk allowed vlan 1-4000
    switchport mode trunk
+   switchport
    evpn ethernet-segment
       identifier 0000:0000:0303:0202:0101
       route-target import 03:03:02:02:01:01
@@ -139,6 +148,7 @@ interface Port-Channel51
    description ipv6_prefix
    switchport trunk allowed vlan 1-500
    switchport mode trunk
+   switchport
    switchport port-security
    no switchport port-security mac-address maximum disabled
    switchport port-security vlan 1 mac-address maximum 3
@@ -172,6 +182,7 @@ interface Port-Channel100
    switchport vlan forwarding accept all
    switchport trunk group g1
    switchport trunk group g2
+   no switchport
    switchport source-interface tx multicast
    switchport vlan translation 12 20
    switchport vlan translation 23 inner 74 42
@@ -214,6 +225,7 @@ interface Port-Channel101
    description PVLAN Promiscuous Access - only one secondary
    switchport access vlan 110
    switchport mode access
+   switchport
    switchport pvlan mapping 111
    no qos trust
 !
@@ -221,17 +233,21 @@ interface Port-Channel102
    description PVLAN Promiscuous Trunk - vlan translation out
    switchport trunk allowed vlan 110-112
    switchport mode trunk
+   switchport
+   switchport vlan translation out 111-112 110
 !
 interface Port-Channel103
    description PVLAN Secondary Trunk
    switchport trunk allowed vlan 110-112
    switchport mode trunk
+   switchport
    switchport trunk private-vlan secondary
 !
 interface Port-Channel104
    description LACP fallback individual
    switchport trunk allowed vlan 112
    switchport mode trunk
+   switchport
    port-channel lacp fallback timeout 300
    port-channel lacp fallback individual
 !
@@ -261,6 +277,7 @@ interface Port-Channel109
    description Molecule ACLs
    switchport access vlan 110
    switchport mode access
+   switchport
    ip access-group IPV4_ACL_IN in
    ip access-group IPV4_ACL_OUT out
    ipv6 access-group IPV6_ACL_IN in
@@ -323,6 +340,7 @@ interface Port-Channel112
    description LACP fallback individual
    switchport trunk allowed vlan 112
    switchport mode trunk
+   switchport
    port-channel lacp fallback timeout 5
    port-channel lacp fallback individual
 !
@@ -345,6 +363,7 @@ interface Port-Channel115
    description native-vlan-tag-precedence
    switchport trunk native vlan tag
    switchport mode trunk
+   switchport
 !
 interface Port-Channel117
    description interface_with_sflow_ingress_egress_enabled
@@ -373,10 +392,12 @@ interface Port-Channel120
 interface Port-Channel121
    description access_port_with_no_vlans
    switchport mode access
+   switchport
 !
 interface Port-Channel122
    description trunk_port_with_no_vlans
    switchport mode trunk
+   switchport
 !
 interface Port-Channel130
    description IP NAT Testing
@@ -390,6 +411,7 @@ interface Port-Channel131
    description dot1q-tunnel mode
    switchport access vlan 115
    switchport mode dot1q-tunnel
+   switchport
 !
 interface Ethernet3
    description MLAG_PEER_DC1-LEAF1B_Ethernet3
@@ -424,6 +446,7 @@ interface Ethernet10/4
    description LAG Member LACP fallback
    switchport trunk allowed vlan 100
    switchport mode trunk
+   switchport
    channel-group 104 mode active
    spanning-tree portfast
 !
@@ -441,6 +464,7 @@ interface Ethernet11/2
    description LAG Member LACP fallback LLDP ZTP VLAN
    switchport trunk allowed vlan 112
    switchport mode trunk
+   switchport
    channel-group 112 mode active
    lldp tlv transmit ztp vlan 112
    spanning-tree portfast
