--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/sync-e.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/sync-e.cfg
@@ -6,6 +6,7 @@ interface Ethernet3
    description P2P_LINK_TO_DC1-SPINE2_Ethernet5
    switchport trunk allowed vlan 2,14
    switchport mode trunk
+   switchport
    sync-e
       priority 10
 !
