--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mac-security-eth-po-entropy.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mac-security-eth-po-entropy.yml
@@ -56,6 +56,7 @@ port_channel_interfaces:
   - name: Port-Channel3
     description: L2-PORT
     switchport:
+      enabled: true
       trunk:
         allowed_vlan: 1-5
       mode: trunk
