--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ptp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ptp.yml
@@ -42,6 +42,7 @@ port_channel_interfaces:
   - name: Port-Channel5
     description: DC1_L2LEAF1_Po1
     switchport:
+      enabled: true
       trunk:
         allowed_vlan: 110,201
       mode: trunk
@@ -67,6 +68,7 @@ ethernet_interfaces:
     peer_type: spine
     description: P2P_LINK_TO_DC1-SPINE2_Ethernet5
     switchport:
+      enabled: true
       mode: trunk
       trunk:
         allowed_vlan: 2,14
