--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/qos.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/qos.yml
@@ -305,6 +305,7 @@ ethernet_interfaces:
     peer_type: server
     description: SRV-POD02_Eth1
     switchport:
+      enabled: true
       mode: trunk
       trunk:
         allowed_vlan: 110-111,210-211
@@ -344,6 +345,7 @@ ethernet_interfaces:
     peer_type: server
     description: Test-with-policymap
     switchport:
+      enabled: true
       mode: trunk
       trunk:
         allowed_vlan: 110-111,210-211
@@ -359,6 +361,7 @@ port_channel_interfaces:
   - name: Port-Channel3
     description: MLAG_PEER_DC1-LEAF1B_Po3
     switchport:
+      enabled: true
       trunk:
         allowed_vlan: "2-4094"
         groups:
