Fixing tests for deprected vars

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
@@ -1,8 +1,10 @@
 !
 interface Port-Channel2
+   switchport
    switchport access vlan 100
 !
 interface Port-Channel3
+   switchport
    switchport trunk allowed vlan 110
    switchport trunk native vlan 10
    switchport mode trunk
@@ -10,12 +12,14 @@ interface Port-Channel3
    switchport trunk group group2
 !
 interface Port-Channel4
+   switchport
    switchport trunk native vlan tag
    switchport phone vlan 20
    switchport phone trunk tagged
    switchport mode trunk phone
 !
 interface Port-Channel5
+   switchport
    switchport trunk private-vlan secondary
    switchport pvlan mapping 2,3,4
    switchport vlan translation in 23 50
@@ -25,6 +29,7 @@ interface Port-Channel5
 interface Ethernet1
    switchport access vlan 100
    switchport mode access
+   switchport
 !
 interface Ethernet2
    switchport trunk native vlan 10
@@ -32,16 +37,19 @@ interface Ethernet2
    switchport mode trunk
    switchport trunk group group1
    switchport trunk group group2
+   switchport
 !
 interface Ethernet3
    switchport trunk native vlan tag
    switchport phone vlan 20
    switchport phone trunk tagged
    switchport mode trunk phone
+   switchport
 !
 interface Ethernet4
    switchport vlan translation in 23 50
    switchport vlan translation out 25 49
    switchport vlan translation 34 60
+   switchport
    switchport trunk private-vlan secondary
    switchport pvlan mapping 2,3,4
