--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/ethernet-interfaces-switchport.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/ethernet-interfaces-switchport.yml
@@ -6,10 +6,12 @@
 # mode, vlans, native_vlan, native_vlan_tag, trunk_groups, phone, vlan_translations, trunk_private_vlan_secondary, pvlan_mapping
 ethernet_interfaces:
   - name: Ethernet1
+    type: switched
     mode: access
     vlans: 100
 
   - name: Ethernet2
+    type: switched
     mode: trunk
     vlans: 110
     native_vlan: 10
@@ -18,6 +20,7 @@ ethernet_interfaces:
       - group2
 
   - name: Ethernet3
+    type: switched
     native_vlan_tag: true
     native_vlan: 20
     mode: trunk phone
@@ -26,6 +29,7 @@ ethernet_interfaces:
       trunk: tagged
 
   - name: Ethernet4
+    type: switched
     vlan_translations:
       - from: 23
         to: 50
