Refactor(eos_designs)!: Change merge strategy for SVI structured_config from SVI profiles

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/SVI_PROFILE_NODE_1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/SVI_PROFILE_NODE_1.cfg
@@ -91,18 +91,24 @@ interface Loopback1
 interface Vlan110
    description set from structured_config on svi.nodes[inventory_hostname].structured_config
    no shutdown
+   mtu 1000
+   no autostate
    vrf svi_profile_tests_vrf
    ip address virtual 10.1.10.1/24
 !
 interface Vlan111
    description set from structured_config on svi_profile.nodes[inventory_hostname].structured_config
    no shutdown
+   mtu 1000
+   no autostate
    vrf svi_profile_tests_vrf
    ip address virtual 10.1.11.1/24
 !
 interface Vlan112
    description set from structured_config on svi_parent_profile.nodes[inventory_hostname].structured_config
    no shutdown
+   mtu 1200
+   no autostate
    vrf svi_profile_tests_vrf
    ip address virtual 10.1.12.1/24
 !
