--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-v6-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-v6-evpn.yml
@@ -119,7 +119,8 @@ router_bgp:
         rcf_in: Address_Family_IPV6_In()
         rcf_out: Address_Family_IPV6_Out()
     redistribute_routes:
-      - source_protocol: isis level-1
+      - source_protocol: isis
+        isis_level: level-1
         rcf: Address_Family_IPV6_ISIS()
   vlans:
     - id: 24
